# SDL_ColorPick

./: .gitignore  CMakeLists.txt  ColorPick.cpp  ColorPick.h  ColorPickBasic-Info.plist  ColorPickState.cpp  ColorPickState.h  FileChooserInclude.h  Info-macosx.plist  Info.plist  LICENSE.txt  LaunchScreen.storyboard  README.md  cloning.md  directionalScan.h  main.cpp  main.h  meshes.cpp  meshes.h  shader.cpp  shader.h  textures.cpp  textures.h  todo.md  uiControlAchievementToggle.h  uiControlBooleanToggle.h  uiControlButton.h  uiEdgeShadow.h  uiGradientLinear.h  uiHistoryPalleteEditor.h  uiHistoryPreviewScroller.h  uiHueGradient.h  uiHueGradientScroller.h  uiList.h  uiNavArrows.h  uiObject.h  uiRunningMan.h  uiScore.h  uiScrollController.h  uiSettingsScroller.h  (+15 more)
ColorPick iOS SDL/Images.xcassets/AppIconBasic.appiconset/: Contents.json
IOS/: FileChooser.h  FileChooser.mm
OSX/: FileChooser.h  FileChooser.mm  SDL.h  SDL_image.h  SDL_opengl.h
Platform/: README.md
Platform/Android/: AndroidFileChooser.h  FileChooser.cpp  FileChooser.h
Platform/Emscripten/: EmscriptenFileChooser.h  FileChooser.cpp
Platform/IOS/: FileChooser.h  FileChooser.mm
Platform/LINUX/: FileChooser.cpp  LinuxFileChooser.h
Platform/LINUX/Qt/: ColorpickQtWindow.h
Platform/OSX/: ColorPick.cpp  ColorPickOsx.h  ColorPickOsx.mm  FileChooser.h  FileChooser.mm  NSOverlayView.h  NSOverlayView.mm  NSOverlayWindow.h  NSOverlayWindow.mm
Platform/WIN/: FileChooser.cpp  GDIPLUS_INC.H  WinFileChooser.h
Platform/WIN/COLORPICK_WIN_CLR/: CMakeLists.txt  COLORPICK_WIN_CLR - Shortcut.lnk  ColorPickWinClr.cpp  ColorPickWinClr.h  ColorPickWinClrShared.h
SDL/: Tips.rtf
SDL2.framework/Versions/A/: SDL2
SDL2.framework/Versions/A/Resources/: Info.plist
android-project/: build.gradle  buildAllRelease.sh  buildBundle.sh  buildBundleRelease.sh  buildDebug.sh  buildDebugRelease.sh  buildIcons.sh  buildIconsBasic.sh  buildInstallDebug.sh  buildInstallRelease.sh  buildUtils.sh  bundleDebug.sh  installNewSdlLibVersion.sh  local.properties  screenshot.sh
android-project/app/: build.gradle
android-project/app/jni/: Application.mk
android-project/app/jni/src/: Android.mk
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/java/com/vidsbee/colorpicksdl/: SDLColorPickActivity.java
android-project/app/src/main/java/org/libsdl/app/: SDLColorPickActivity.java
android-project/app/src/main/res/values/: strings.xml
cmake/: FindSDL2_image.cmake  osx_bundle_app.sh
cmake_install/: CMakeLists.txt
embuild/: _fullscreen.html  _index.html  activate_embuild.sh  build.sh  publish-ext.sh  publish.sh  run.sh
minigames/: _minigames.h  _todo.md  todo.md
minigames/FlipMaster/: FlipMaster.h
minigames/LinearMixer/: LinearMixer.h
minigames/MatchMaster/: MatchMaster.h
minigames/MixMaster/: MixMaster.h
minigames/game1/: minigame1.h
shaders/: 3dShader.fsh  3dShader.fsh.Unlit.fsh  3dShader.vsh  3dShaderGlass.fsh  3dShaderGlass.vsh  3dShaderGlassReflectiveMoveable.fsh  Shader.fsh  Shader.vsh  ShaderGLES.fsh  ShaderGLSL2.0.fsh  Shader_defunct.fsh  uiShader.fsh  uiShader.vsh  uiShader.vsh.3d.vsh
test/: directionalScan.cpp  directionalScanTest.cpp  uiListTest.cp  uiListTest.cpp
textures/models/: eggball.ply  eyedropper2.2_bulb.ply  eyedropper2.2_fill.ply  eyedropper2.2_stem.ply
